<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Actives.FragmentCadastro">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voltar"
            android:textColor="@color/white"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/back_ic"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            />

        <TextView
            android:id="@+id/text_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="Cadastre-se"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/container_components"
            style="@style/ConteinerComponents"
            android:layout_width="368dp"
            android:layout_height="364dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cadastro"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_max="500dp" />

        <EditText
            android:id="@+id/edit_nome"
            style="@style/Edit_Text"
            android:layout_marginTop="20dp"
            android:hint="@string/EditNome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@id/container_components"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@id/container_components"
            app:layout_constraintTop_toTopOf="@id/container_components"
            app:layout_constraintWidth_default="spread" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:hint="@string/EditEmail"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/container_components"
            app:layout_constraintEnd_toEndOf="@id/container_components"
            app:layout_constraintTop_toBottomOf="@id/edit_nome"
            app:layout_constraintWidth_default="spread"
            />

        <EditText
            android:id="@+id/edit_telefone"
            style="@style/Edit_Text"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/EditTelefone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@id/container_components"
            app:layout_constraintStart_toStartOf="@id/container_components"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            app:layout_constraintWidth_default="spread" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/EditSenha"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="@id/container_components"
            app:layout_constraintStart_toStartOf="@id/container_components"
            app:layout_constraintTop_toBottomOf="@id/edit_telefone"
            app:layout_constraintWidth_default="spread" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            style="@style/Button"
            android:text="Cadastrar"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="@id/container_components"
            app:layout_constraintEnd_toEndOf="@id/container_components"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            app:layout_constraintBottom_toBottomOf="@id/container_components"
            app:layout_constraintWidth_default="spread"
            />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_components"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>